# ColoringUtility

./: .gitignore  CMakeLists.txt  ColoringUtility.pro  algorithm.h  algorithm_igcol.cpp  algorithm_igcol.h  cli.cpp  cli.h  coloring.py  coloring_with_sat.py  common.h  compute.cpp  compute.h  fractional_chrom_lb.py  graphs.cpp  graphs.h  graphs_common.h  h2col.cpp  lovasz_theta_lb.py  py_wrapper.cpp  pysat_lb.py  setup.py  tabu_base.h  tabucol.cpp  tabucol.h
src/: algorithm.h  algorithm_igcol.cpp  cli.cpp  cli.h  compute.cpp  compute.h  graphs.h  h2col.cpp  h2col.h  main.cpp  py_wrapper.cpp  statistics.cpp  statistics.h  tabu_base.cpp  tabu_base.h  tabucol.cpp  tabucol.h
tools/: coloring_sat.py
